Adding sealights as java agent